fix tree bugs and impprove popover with scrollbar.

--- a/app/src/components/GUIElements/CSS/EnTable.css
+++ b/app/src/components/GUIElements/CSS/EnTable.css
@@ -1,21 +1,21 @@
 
 .scroll {
-    width: 200px;
-    height: 400px;
+    height: 90%;
     background: red;
-    overflow: scroll;
+    overflow-y: scroll;
+    white-space:pre-wrap;
 }
-.scroll::-webkit-scrollbar {
-    width: 12px;
-    height: 15px;
-}
+/*.scroll::-webkit-scrollbar {*/
+/*    width: 12px;*/
+/*    height: 15px;*/
+/*}*/
 
-.scroll::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
+/*.scroll::-webkit-scrollbar-track {*/
+/*    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+/*    border-radius: 10px;*/
+/*}*/
 
-.scroll::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
+/*.scroll::-webkit-scrollbar-thumb {*/
+/*    border-radius: 10px;*/
+/*    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
+/*}*/
